--- a/SlotForms/SlotForms.csproj
+++ b/SlotForms/SlotForms.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Symbol_Base.psd" />
+  </ItemGroup>
+
 </Project>
